# Kaspersky-SafeBoard2025-Spring-FileCollector

./: CMakeLists.txt  README.md
FileCollector/: CMakeLists.txt  FileCollector.cpp  FileCollector.hpp
Tests/: CMakeLists.txt  FileCollectorIntegrationTest.cpp  FileCollectorUnitTest.cpp
googletest/: CMakeLists.txt
test-task/: FileCollector.docx
